<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/main"
        android:title="@string/hand" />
    <item
        android:id="@+id/pen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:checked="true"
        android:icon="@drawable/crayon"
        android:title="@string/pencil" />
    <item
        android:id="@+id/wand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/baguette"
        android:title="@string/wand" />
    <item
        android:id="@+id/crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/recadrer"
        android:title="@string/crop" />
    <item
        android:id="@+id/rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/rotation"
        android:title="@string/rotate" />
</menu>