<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/dossier"
        android:title="@string/file" />
    <item
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/undo"
        android:title="@string/undo" />
    <item
        android:id="@+id/redo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/redo"
        android:title="@string/redo" />
    <item
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/save"
        android:title="@string/save" />
</menu>