<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/file"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:enabled="true"
                android:src="@drawable/dossier"
                android:onClick="imageChooser"
                android:contentDescription="@string/file" />
            <ImageButton
                android:id="@+id/undo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:enabled="true"
                android:src="@drawable/undo"
                android:onClick="annuler"
                android:contentDescription="@string/undo" />
            <ImageButton
                android:id="@+id/redo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:enabled="true"
                android:src="@drawable/redo"
                android:onClick="retablir"
                android:contentDescription="@string/redo" />
            <ImageButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:enabled="true"
                android:src="@drawable/save"
                android:contentDescription="@string/save" />
            
        </LinearLayout>

        <com.example.projet_android.MainImage
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:contentDescription="@string/editing_image"
            android:scaleType="centerCrop"
            android:src="@drawable/image_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/hand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:enabled="true"
                android:src="@drawable/main"
                android:contentDescription="@string/hand" />

            <ImageButton
                android:id="@+id/pen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:checked="true"
                android:enabled="true"
                android:src="@drawable/crayon"
                android:contentDescription="@string/pencil" />

            <ImageButton
                android:id="@+id/wand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:enabled="true"
                android:src="@drawable/baguette"
                android:contentDescription="@string/wand" />

            <ImageButton
                android:id="@+id/crop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:contentDescription="@string/crop"
                android:enabled="true"
                android:src="@drawable/recadrer" />

            <ImageButton
                android:id="@+id/rotate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:enabled="true"
                android:src="@drawable/rotation"
                android:onClick="rotate"
                android:contentDescription="@string/rotate" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>